# moonlight-qt

./: .gitignore  Build Moonlight on windows.txt  PerClientSettings_Analysis.md  plan.md  usb_solutions.txt
app/: app.pro  main.cpp  path.cpp  qml.qrc  version.txt
app/deploy/linux/: com.moonlight_stream.Moonlight.appdata.xml
app/gui/: AppView.qml  ClientSettingsDialog.qml  NavigableItemDelegate.qml  PassthroughView.qml  PcView.qml  SettingsView.qml  StreamSegue.qml  appmodel.cpp  appmodel.h  computermodel.cpp  computermodel.h  main.qml
app/settings/: gamepadmapping.cpp  gamepadmapping.h  streamingpreferences.cpp  streamingpreferences.h
app/streaming/: session.cpp  session.h
app/streaming/input/: gamepad.cpp  input.cpp  input.h  keyboard.cpp
app/streaming/passthrough/: bthidcapture.cpp  bthidcapture.h  deviceenumerator.cpp  deviceenumerator.h  passthroughclient.cpp  passthroughclient.h  protocol.h  usbipdaemon.cpp  usbipdaemon.h  usbipexporter.cpp  usbipexporter.h  winusbinstaller.cpp  winusbinstaller.h
passthrough-server/: CMakeLists.txt
passthrough-server/scripts/: install-driver.bat  uninstall-driver.bat
passthrough-server/scripts/usbip-win-0.3.6-dev/: install-driver.bat
passthrough-server/src/: main.cpp  server.cpp  server.h  systray.cpp  systray.h  vhci_manager.cpp  vhci_manager.h
scripts/: build-arch.bat  build-personal.bat  generate-mocs.ps1
